--- a/index.html
+++ b/index.html
@@ -10,16 +10,33 @@
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 
     <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.5.4/dist/aframe-extras.min.js"></script>
-  </head>
 
-  <body style="margin: 0px; overflow: hidden">
-    <button
-      id="unmuteButton"
-      style="
+    <style>
+      body {
+        margin: 0;
+        overflow: hidden;
+      }
+
+      /* Full-screen overlay */
+      #overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.9);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 2000;
+      }
+
+      /* Start button */
+      #unmuteButton {
         position: absolute;
-        top: 20px;
+        top: 50%;
         left: 50%;
-        transform: translateX(-50%);
+        transform: translate(-50%, -50%);
         z-index: 1000;
         padding: 10px 20px;
         font-size: 16px;
@@ -28,10 +45,15 @@
         border: none;
         border-radius: 5px;
         cursor: pointer;
-      "
-    >
-      Unmute Sound45
-    </button>
+      }
+    </style>
+  </head>
+
+  <body style="margin: 0px; overflow: hidden">
+    <div id="overlay">
+      <button id="unmuteButton">Unmute Sound</button>
+    </div>
+
     <audio id="music" preload="auto" style="display: none">
       <source src="paul.mp3" type="audio/mp3" />
     </audio>
@@ -56,6 +78,7 @@
       let speakBtn = document.getElementById("speakBtn");
       let unmuteButton = document.getElementById("unmuteButton");
       let audioElement = document.getElementById("music");
+      let overlay = document.getElementById("overlay");
 
       // const listener = new THREE.AudioListener();
       // const sound = new THREE.Audio(listener);
@@ -67,8 +90,10 @@
 
       let jawNode;
       let lipJoints = [];
+      let teethJoints = [];
       let openMouth = false;
       let angle = 0;
+      let initialTeethPositions = new Map(); // Сохранение начальных позиций зубов
 
       let audioContext;
       let analyser;
@@ -89,32 +114,21 @@
         }
       }
 
+      audioElement.addEventListener("ended", () => {
+        isMouthAnimating = false;
+
+        let mixer = model.components["animation-mixer"].mixer;
+        let currentAction = mixer.existingAction("StartAr_v2");
+        let idleAction = mixer.existingAction("Idle_Happy");
+
+        currentAction.crossFadeTo(idleAction, 1.5, false);
+        idleAction.play();
+      });
+
       unmuteButton.addEventListener("click", () => {
         isSoundEnabled = true;
-
-        audioElement.onended = () => {
-          isMouthAnimating = false;
-
-          let mixer = model.components["animation-mixer"].mixer;
-          let currentAction = mixer.existingAction("StartAr_v2");
-          let idleAction = mixer.existingAction("Idle_Happy");
-          currentAction.crossFadeTo(idleAction, 1.5, false);
-          idleAction.play();
-        };
-        // audioLoader.load("paul.mp3", function (buffer) {
-        //   sound.setBuffer(buffer);
-        //   sound.setVolume(1.0);
-        //   sound.onEnded = () => {
-        //     isMouthAnimating = false;
-
-        //     let mixer = model.components["animation-mixer"].mixer;
-        //     let currentAction = mixer.existingAction("StartAr_v2");
-        //     let idleAction = mixer.existingAction("Idle_Happy");
-        //     currentAction.crossFadeTo(idleAction, 1.5, false);
-        //     idleAction.play();
-        //   };
-        // });
         unmuteButton.style.display = "none";
+        overlay.style.display = "none";
       });
 
       marker.addEventListener("markerFound", () => {
@@ -123,7 +137,6 @@
 
         audioElement.play();
 
-        // sound.play();
         isMouthAnimating = true;
         animateMouth();
 
@@ -138,7 +151,7 @@
 
       marker.addEventListener("markerLost", () => {
         isSoundActive = false;
-        // cancelAnimationFrame(animationFrameId);
+        cancelAnimationFrame(animationFrameId);
         audioElement.pause();
         audioElement.currentTime = 0;
 
@@ -218,6 +231,21 @@
           }
         }
 
+        let teethNames = [
+          "upperTeethJoint_M",
+          "Teeth_up", // Верхние зубы
+          "lowerTeethJoint_M",
+          "Teeth_down", // Нижние зубы
+        ];
+
+        for (let name of teethNames) {
+          let joint = mesh.getObjectByName(name);
+          if (joint) {
+            teethJoints.push(joint);
+            initialTeethPositions.set(joint.name, joint.position.clone()); // Сохраняем начальную позицию
+          }
+        }
+
         jawNode = mesh.getObjectByName("JawJoint_M");
       });
 
@@ -250,7 +278,22 @@
             joint.position.y = -0.03 * factor * Math.sin(angle * Math.PI);
           }
         }
+        for (let joint of teethJoints) {
+          let initialPos = initialTeethPositions.get(joint.name);
+          if (!initialPos) continue;
 
+          if (
+            joint.name.includes("upperTeeth") ||
+            joint.name.includes("Teeth_up")
+          ) {
+            joint.position.y = initialPos.y + 0.01 * Math.sin(angle * Math.PI);
+          } else if (
+            joint.name.includes("lowerTeeth") ||
+            joint.name.includes("Teeth_down")
+          ) {
+            joint.position.y = initialPos.y - 0.01 * Math.sin(angle * Math.PI);
+          }
+        }
         requestAnimationFrame(animateMouth);
       }
     </script>
